syntax = "proto3";

package messages.user;

option go_package = "messages/user";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool status = 1;
  string error_message = 2;
  string token = 3;
  uint64 id = 4;
}